# agentic-pipeline-starter

./: .env.example  LICENSE  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
agentic_pipeline_starter/: __init__.py  config.py
agentic_pipeline_starter/api/: __init__.py
agentic_pipeline_starter/graph/: __init__.py
agentic_pipeline_starter/llm/: __init__.py  base.py  factory.py  mock_llm.py  ollama_client.py
agentic_pipeline_starter/nodes/: __init__.py  async_interface.py  error_handler.py  mock_responses.py  plan_validator.py  planner.py  planner_logger.py  prompt_templates.py  report_templates.py  reporter.py  toolbox.py
agentic_pipeline_starter/state/: __init__.py  conversation_state.py
agentic_pipeline_starter/tools/: __init__.py  http_fetch.py  safe_math.py
jira/: AIP-001-init-repo.md  AIP-002-conversation-state.md  AIP-003-planner-node.md  AIP-004-toolbox-node.md  AIP-005-judge-node.md  AIP-006-reporter-node.md  AIP-007-langgraph-pipeline.md  AIP-008-fastapi-endpoint.md  AIP-009-deterministic-tests.md  AIP-010-ci-pipeline.md  AIP-011-readme-documentation.md  AIP-012-tag-release.md  EPICS.md  PROJECT-SUMMARY-CLEAN.md  PROJECT-SUMMARY.md
tests/: __init__.py
